gccida/c2/debug_reload_to_stream
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_reload_to_stream/src/reload.c:7386:22: error: use of undeclared identifier 'reg_class_names_0'; did you mean 'reg_class_names'?
fprintf( v1, "%s, ", reg_class_names_0[*( ( int *)v2 - 20)]); 
                     ^~~~~~~~~~~~~~~~~
                     reg_class_names
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_reload_to_stream/src/reload.c:6884:27: note: 'reg_class_names' declared here
static const char * const reg_class_names[] = REG_CLASS_NAMES;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_reload_to_stream/src/reload.c:7448:51: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
fprintf( v1, "%ssecondary_in_icode = %s", "\n\t", insn_data_0[v9].name); 
                                                  ^~~~~~~~~~~
                                                  insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_reload_to_stream/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_reload_to_stream/src/reload.c:7453:49: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
fprintf( v1, "%ssecondary_out_icode = %s", v10, insn_data_0[v11].name); 
                                                ^~~~~~~~~~~
                                                insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_reload_to_stream/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/debug_reload_to_stream/src/obj/reload.o] Error 1
